@@ -64,3 +64,4 @@ mod_logio.so            0x6FAE0000    0x00010000
 util_ldap.so            0x6FAD0000    0x00010000
 mod_auth_ldap.so        0x6FAC0000    0x00010000
 mod_ident.so            0x6FAB0000    0x00010000
+mod_proxy_ajp.so        0x6FAA0000    0x00010000
